--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "luxon": "^2.3.0",
-    "stein-js-client": "^0.0.2"
+    "stein-js-client": "^0.0.2",
+    "uuid": "^8.3.2"
   }
 }
