--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "author": "Rifki",
   "license": "ISC",
+  "bin": {
+    "tran": "./server.js"
+  },
   "dependencies": {
+    "array-sort": "^1.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "luxon": "^2.3.0",
