--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.3",
     "luxon": "^2.3.0",
     "stein-js-client": "^0.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yargs": "^17.3.1"
   }
 }
